<resources>
    <string name="app_name">MuslimNeeds</string>
    <string name="tahara">الطهارة</string>
    <string name="azkar">الأذكار</string>
    <string name="doaa">الأدعية</string>
    <string name="shrotElsalah">شروط الصلاة</string>
    <string name="sefatElsalah">صفة الصلاة</string>
    <string name="elfra2d">الفرائض</string>
    <string name="awqatElsalah">أوقات الصلاة</string>
    <string name="elsonanWelnwafl">السنن و النوافل</string>
    <string name="elgom3a">الجمعة</string>
    <string name="el7adasEl2sghr">الحدث الأصغر: البول و الغائط و ريح الدبر و المذى و النوم المستغرق.</string>
    <string name="el7adasEl2akbar">الحدث الأكبر : خروج المنى و التقاء ختان الرجل و ختان المرأة و الحيض أو النفاس.</string>
    <string name="wdo2details1">1- غسل الكفين </string>
    <string name="wdo2details1Tips">تنوى الوضوء (و النية تكون بالقلب و لا حاجة للتلفظ بها) فتسمى قائلا "بسم الله" ثم تغسل كفيك ثلاثا </string>
    <string name="wdo2details2">2- المضمضة </string>
    <string name="wdo2details2Tips">تدخل الماء بيدك فى فمك وتحرك الماء داخل الفم ثم تخرجه تفعل ذلك ثلاث مرات </string>
    <string name="wdo2details3">3- الاستنشاق </string>
    <string name="wdo2details3Tips">تدخل الماء فى أنفك بيدك اليمنى ثم تنثره بيدك اليسرى</string>
    <string name="wdo2details4">4- غسل الوجه </string>
    <string name="wdo2details4Tips">تغسل وجهك ثلاث مرات و يكون غسل الوجه من أعلى الجبهة الى أسفل الذقن طولا و من الأذن الى الأذن عرضا</string>
    <string name="wdo2details5">5- غسل اليدين </string>
    <string name="wdo2details5Tips">تغسل اليد اليمنى الى المرفق ثلاث مرات ثم تغسل اليد اليسرى الى المرفق ثلاث مرات أيضا</string>
    <string name="wdo2details6">6- المسح على الرأس </string>
    <string name="wdo2details6Tips">تبلل يدك ثم تمسح بهما على رأسك من مقدمته الى الخلف ثم ترجع بيدك الى الأمام , تفعل ذلك مرة واحدة وتستطيع الاكتفاء بمسح جزء من الرأس</string>
    <string name="wdo2details7">7- مسح الأذنين </string>
    <string name="wdo2details7Tips">تمسح الأذنين بنفس الماء الذى يؤخذ من للرأس , و يكون المسح مرة واحدة و يمكن وصله مع مسح الرأس</string>
    <string name="wdo2details8">8- غسل الرجلين </string>
    <string name="wdo2details8Tips">تغسل الرجل اليمنى ثلاث مرات ثم اليسرى كذلك , و يلاحظ فى غسل الرجلين ايصال الماء الى الكعبين و هما العظمتان الناتئتان عن جانبى القدم</string>
    <string name="elwdo2">الوضوء</string>
    <string name="elghosl">الغسل</string>
    <string name="salah">الصلاة</string>
    <string name="main">الرئيسية</string>
    <string name="about">عن البرنامج</string>
    <string name="settings">الاعدادات</string>
    <string name="ghosldtails">تنوى الغسل فتسمى و تغسل كفيك ثلاثا ثم تغسل فرجك بيدك اليسرى .. بعد ذلك تغسل كفيك مرة أخرى و تتوضأ .. ثم تفرغ الماء على رأسك ثلاث مرات و تتأكد من وصول الماء الى منابت الشعر .. ثم تغسل سائر جسمك مبتدأ بالجانب الأيمن ثم الأيسر مع ملاحظة ايصال الماء الى كافة انحاء الجسم و تختتم الغسل بغسل القدمين .</string>
    <string name="ShrotElsalah">شروط الصلاة</string>
    <string name="SefatElsalah">صفة الصلاة</string>
    <string name="Elfra2d">الفرائض</string>
    <string name="AwqatElsalah">أوقات الصلاة</string>
    <string name="ElsonanWElnwafl">السنن و النوافل</string>
    <string name="Elgom3a">الحمعة</string>
    <string name="prayerTimes">مواقيت الصلاة</string>
    <string name="elisha">العشاء</string>
    <string name="elmaghrib">المغرب</string>
    <string name="elasr">العصر</string>
    <string name="eldhuhr">الظهر</string>
    <string name="elshroq">الشروق</string>
    <string name="elfajr">الفجر</string>
    <string name="location">الموقع</string>
    <string name="date">التاريخ</string>
    <string name="search">بحث</string>
    <string name="searchLocation">بحث الموقع</string>
    <string name="shareApp">شارك التطبيق</string>
    <string name="rateUs">قيم التطبيق</string>

</resources>
