<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".MainMenu.TaharaMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView

                style="@style/customCardView">

                <LinearLayout style="@style/CustomLinearLayoutMainMenu">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/CustomTextView"
                        android:text="@string/el7adasEl2sghr" />

                    <View style="@style/CustomLine" />

                    <Button
                        style="@style/customButton"
                        android:background="@drawable/round_button"
                        android:onClick="wdo2Details"
                        android:text="@string/elwdo2" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/customCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/CustomTextView"
                        android:text="@string/el7adasEl2akbar" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        style="@style/customButton"
                        android:background="@drawable/round_button"
                        android:onClick="ghoslDetails"
                        android:text="@string/elghosl" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>