<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrayerTimesContent.PrayerTimes"
    android:background="@drawable/background">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorAccent"
                android:layout_margin="10dp"
                android:padding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/searchLocationET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/searchLocation"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:background="@drawable/round_button"
                    android:layout_margin="5dp"/>

            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/location"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/date"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prayerTimes"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/elfajrTV"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/elfajr"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:gravity="end"
                    />
                <TextView
                    android:id="@+id/elfajrTimeTV"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/elfajr"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:gravity="start"
                    />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elshroqTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elshroq"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/elshroqTimeTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elshroq"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eldhuhrTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/eldhuhr"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/eldhuhrTimeTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/eldhuhr"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elasrTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elasr"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/elasrTimeTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elasr"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elmaghribTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elmaghrib"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/elmaghribTimeTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elmaghrib"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elishaTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elisha"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="end"
                        />
                    <TextView
                        android:id="@+id/elishaTimeTV"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elisha"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="start"
                        />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

</ScrollView>