<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/drawer1">


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/salahicon"
                        android:scaleType="fitXY"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                     />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_button"
                        android:onClick="SalahFunc"
                        android:text="@string/salah"
                        android:textSize="30sp"
                        android:textStyle="bold"
                       android:padding="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/wdo2icon"
                        android:scaleType="fitXY"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_button"
                        android:onClick="TaharaFunc"
                        android:text="@string/tahara"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/azkaricon"
                        android:scaleType="fitXY"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_button"
                        android:onClick="AzkarFunc"
                        android:text="@string/azkar"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">


                    <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/doaaicon"
                    android:scaleType="fitXY"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_button"
                        android:onClick="DoaaFunc"
                        android:text="@string/doaa"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/prayertimes"
                        android:scaleType="fitXY"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/round_button"
                        android:onClick="PrayerTimes"
                        android:text="@string/prayerTimes"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout = "@layout/navigation_header"
        app:menu="@menu/navigation_menu">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>